# ElfSword

./: .gitignore  AUTHORS  Makefile.am  README  THANKS  configure.ac  reconf
doc/: Doxyfile  Doxyfile.in
libelfsword/: Makefile.am  algorithms.c  algorithms.h  check.c  descriptor.h  doc.h  dynrel.c  elf.c  elf.h  elf_spec.c  elf_spec.h  elfmap.c  elfsword.h  errors.c  proghead.c  sections.c  statrel.c  symbols.c  test00.c
libelfsword/elfsword/: check.h  descriptor.h  dynrel.h  elf.h  elf_spec.h  elfmap.h  errors.h  proghead.h  sections.h  statrel.h  symbols.h
libnightelf/: Makefile.am  luainterface.c
libsimple/: Makefile.am  simple.h  simplehash.c  simplehash.h  simplelist.c  test00.c  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c
libsimple/simple/: simplehash.h  simplelist.h  simpletypes.h
src/: Makefile  Makefile.am  doc.h  elf.c  elf.h  elf_specification.c  elf_specification.h  head  main.c
tests/: 00_allocate.c  01_itersections.c  02_itersechash.c  02_secchecknames.c  03_itersym.c  04_itersecfilter.c  05_itersym2.c  06_itersym3.c  07_proghead.c  08_staticreloc.c  09_dynamicreloc.c  Makefile.am
