AC_INIT([ElfSword, and ELF analysis library], [0.1],
        [Giovanni Simoni <simgidacav@gmail.com>],
        [elfsword])

AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS([includes/config.h])

AC_PROG_CC
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile
                 includes/Makefile
                 libsimple/Makefile
                 libelfsword/Makefile])
AC_OUTPUT
